Aligned inputfield descriptions to the left and fixed skipdays bug

--- a/FrontEnd/Modules/Templates/Css/WtsConfiguration.css
+++ b/FrontEnd/Modules/Templates/Css/WtsConfiguration.css
@@ -70,3 +70,7 @@
 #wtsConfigurationTab .formview.compact .item.full > .k-button {
     margin-left: 0;
 }
+#wtsConfigurationTab .formview.compact .form-hint-align-left {
+    padding-left: 0 !important;
+    padding-right: 215px;
+}
